--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -11,22 +11,22 @@
     >
       <div class="col-xs-12">
         <div class="col-xs-12 justus-btn justus-btn-tyyppi" data-ng-class="{'active': julkaisutyyppi_paa == o.arvo}"
-        data-ng-click="useJulkaisutyyppiPaa(o.arvo);">{{o.selite[lang]}}</div>
+        data-ng-click="useJulkaisutyyppiPaa(o.arvo);">{{o.selite}}</div>
         <!-- julkaisutyyppi alaluokka -->
         <div class="row form-group"
          data-ng-show="julkaisutyyppi_paa == o.arvo">
           <div class="col-xs-1"></div>
           <div class="col-xs-11">
-            <input type="hidden" data-ng-model="justus.julkaisutyyppi">
+            <input type="hidden" data-ng-model="justus.julkaisu.julkaisutyyppi">
             <div data-ng-repeat="a in o.alatyypit | orderBy: 'arvo'">
-              <div class="col-xs-12 justus-btn justus-btn-tyyppi" data-ng-class="{'active': justus.julkaisutyyppi == a.arvo}"
-               data-ng-click="useField('julkaisutyyppi',a.arvo); useVaihe(3);">
-                {{a.selite[lang]}}
+              <div class="col-xs-12 justus-btn justus-btn-tyyppi" data-ng-class="{'active': justus.julkaisu.julkaisutyyppi == a.arvo}"
+               data-ng-click="useField('julkaisu','julkaisutyyppi',a.arvo); useVaihe(3);">
+                {{a.selite}}
                 <i class="fa fa-info-circle"
                 data-popover-trigger="'mouseenter'" data-popover-placement="right"
                 data-popover-class="justus-info-bw"
-                data-uib-popover="{{a.kuvaus[lang]}}"
-                data-ng-show="a.kuvaus[lang]"></i>
+                data-uib-popover="{{a.kuvaus}}"
+                data-ng-show="a.kuvaus"></i>
               </div>
             </div>
           </div>
