--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -257,10 +257,10 @@
                   <ui-select-match class="ui-select-match"
                                    data-ng-value="justus.organisaatiotekija[$index].rooli"
                                    placeholder="{{justus.organisaatiotekija[$index].rooli}} {{getCode('julkaisuntekijanrooli',justus.organisaatiotekija[$index].rooli).selite[lang] || i18n.content.form.organisaatiotekija.tekijanrooli.picktip[lang]}}">
-                    {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+                    {{ $select.selected.arvo }} {{ $select.selected.selite }}
                   </ui-select-match>
                   <ui-select-choices repeat="role in codes.julkaisuntekijanrooli | orderBy: 'arvo' | filter: $select.search">
-                    {{role.arvo}} {{role.selite[lang]}}
+                    {{role.arvo}} {{role.selite }}
                   </ui-select-choices>
                 </ui-select>
             </div>
@@ -337,7 +337,6 @@
                   data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
                 </span>
                 <span class="btn btn-primary"
-
                   data-ng-click="justus.organisaatiotekija[$parent.$index].alayksikko.push('')"
                       data-ng-show="($index == justus.organisaatiotekija[$parent.$index].alayksikko.length-1 && a!='')"
                   title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"
@@ -829,8 +828,8 @@
           <input type="text"
             class="form-control"
             data-ng-model="sel_julkaisunkieli"
-            data-ng-value="getCode('kieli',justus.julkaisunkieli.toUpperCase()).selite[lang]"
-            data-uib-typeahead="o.selite[lang] for o in codes['kieli'] | filter: $viewValue"
+            data-ng-value="getSelite(codes.kieli, justus.julkaisu.julkaisunkieli.toUpperCase())"
+            data-uib-typeahead="o.selite for o in codes['kieli'] | filter: $viewValue"
             placeholder="{{i18n.content.form.julkaisunkieli.picktip[lang]}}"
             data-typeahead-on-select="useField('julkaisu','julkaisunkieli',$item.arvo.toLowerCase())"
             data-typeahead-editable="false">
@@ -902,9 +901,9 @@
         <div class="col-xs-10">
           <input type="text"
             class="form-control"
-            data-ng-value="getCode('maatjavaltiot2',justus.julkaisumaa).selite[lang]"
+            data-ng-value="getSelite(codes.maatjavaltiot2 ,justus.julkaisu.julkaisumaa)"
             data-ng-model="sel_julkaisumaa"
-            data-uib-typeahead="o.arvo+' '+o.selite[lang] for o in codes['maatjavaltiot2'] | filter: $viewValue"
+            data-uib-typeahead="o.arvo+' '+o.selite for o in codes['maatjavaltiot2'] | filter: $viewValue"
             data-typeahead-on-select="useField('julkaisu','julkaisumaa',$item.arvo)"
             placeholder="{{ i18n.content.form.julkaisumaa.picktip[lang] }}">
           <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
@@ -1007,7 +1006,7 @@
                    ng-disabled="true"
                     class="form-control"
                     data-ng-model="lab_tieteenala$index"
-                    data-ng-value="i.tieteenalakoodi+' '+getCode('tieteenalat',i.tieteenalakoodi).selite[lang]">
+                    data-ng-value="i.tieteenalakoodi+' '+getSelite(codes.tieteenalat, i.tieteenalakoodi)">
             <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
           </div>
         </div>
@@ -1026,14 +1025,14 @@
       <div class="row">
         <div class="col-sm-5 col-xs-12 form-group">
           <ui-select data-ng-model="tieteenala.selected"
-            on-select="useTieteenala($select.selected.arvo)"
+            on-select="useTieteenala($select.selected)"
             theme="bootstrap">
             <ui-select-match class="ui-select-match"
               placeholder="{{i18n.content.form.tieteenala.paa.picktip[lang]}}">
-              {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+              {{ $select.selected.arvo }} {{ $select.selected.selite }}
             </ui-select-match>
             <ui-select-choices repeat="o in codes.tieteenalat | orderBy: 'arvo' | filter: $select.search">
-              {{o.arvo}} {{o.selite[lang]}}
+              {{o.arvo}} {{o.selite}}
             </ui-select-choices>
           </ui-select>
         </div>
@@ -1042,14 +1041,14 @@
           <div data-ng-repeat="p in codes.tieteenalat"
             data-ng-if="p.arvo==tieteenala_paa">
             <ui-select data-ng-model="alatieteenalat.selected"
-              on-select="useTieteenala($select.selected.arvo)"
+              on-select="useTieteenala($select.selected)"
               theme="bootstrap">
               <ui-select-match class="ui-select-match"
                 placeholder="{{i18n.content.form.tieteenala.ala.picktip[lang]}}">
-                {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+                {{ $select.selected.arvo }} {{ $select.selected.selite }}
               </ui-select-match>
               <ui-select-choices repeat="o in alatieteenalat | orderBy: 'arvo' | filter: $select.search">
-                {{o.arvo}} {{o.selite[lang]}}
+                {{o.arvo}} {{o.selite }}
               </ui-select-choices>
             </ui-select>
           </div>
@@ -1057,15 +1056,15 @@
           <!--dev--><!-- hack... now parent.index... --><!--enddev-->
           <div data-ng-if="!tieteenala_paa">
             <ui-select data-ng-model="alatieteenalat.selected"
-              on-select="useTieteenala($select.selected.arvo)"
+              on-select="useTieteenala($select.selected)"
               theme="bootstrap">
               <ui-select-match class="ui-select-match"
                 placeholder="{{i18n.content.form.tieteenala.ala.picktip[lang]}}">
-                {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+                {{ $select.selected.arvo }} {{ $select.selected.selite }}
               </ui-select-match>
               <ui-select-choices repeat="o in getAlltieteenalat() | orderBy: 'arvo'"
                 ui-disable-choice="o.nogo">
-                {{o.arvo}} {{o.selite[lang]}}
+                {{o.arvo}} {{o.selite }}
               </ui-select-choices>
             </ui-select>
           </div>
@@ -1098,7 +1097,7 @@
             <input type="text" ng-disabled="true"
                    class="form-control"
                    data-ng-model="lab_taiteenala$index"
-                   data-ng-value="i.taiteenalakoodi+' '+getCode('taiteenalat',i.taiteenalakoodi).selite[lang]">
+                   data-ng-value="i.taiteenalakoodi+' '+getSelite(codes.taiteenalat, i.taiteenalakoodi)">
             <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
           </div>
         </div>
@@ -1121,10 +1120,10 @@
                     <ui-select-match class="ui-select-match"
                                      data-ng-value="justus.taiteenala"
                                      placeholder="{{i18n.content.form.taiteenala.picktip[lang]}}">
-                      {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+                      {{ $select.selected.arvo }} {{ $select.selected.selite }}
                     </ui-select-match>
                     <ui-select-choices repeat="code in codes.taiteenalat | orderBy: 'arvo' | filter: $select.search">
-                      {{code.arvo}} {{code.selite[lang]}}
+                      {{code.arvo}} {{code.selite}}
                     </ui-select-choices>
                   </ui-select>
               </div>
@@ -1155,7 +1154,7 @@
           <input type="text" ng-disabled="true"
           class="form-control"
           data-ng-model="lab_taidealantyyppikategoria$index"
-          data-ng-value="i +' '+getCode('taidealantyypit',i).selite[lang]">
+          data-ng-value="i +' '+getSelite(codes.taidealantyypit ,i)">
           <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
         </div>
       </div>
@@ -1177,10 +1176,10 @@
           <ui-select-match class="ui-select-match"
                            data-ng-value="justus.taidealantyyppikategoria"
                            placeholder="{{i18n.content.form.taidealantyyppikategoria.picktip[lang]}}">
-          {{ $select.selected.arvo }} {{ $select.selected.selite[lang] }}
+          {{ $select.selected.arvo }} {{ $select.selected.selite }}
           </ui-select-match>
           <ui-select-choices repeat="code in codes.taidealantyypit | orderBy: 'arvo' | filter: $select.search">
-          {{code.arvo}} {{code.selite[lang]}}
+          {{code.arvo}} {{code.selite}}
           </ui-select-choices>
           </ui-select>
         </div>
