--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1529,19 +1529,36 @@
 <!-- JATKA -->
 <div class="row form-group">
   <!-- <div class="row"> -->
-  <div class="col-md-8">
+  <div class="col-md-6">
     <button class="btn btn-lg btn-block btn-primary"
-      type="button"
-      data-ng-click="useVaihe(4)">
+            type="button"
+            data-ng-click="useVaihe(5)">
       {{i18n.content.tietojensyotto.jatka[lang]}}
     </button>
   </div>
-  <div class="col-md-4">
-    <button class="btn btn-lg btn-block btn-danger"
+  <div class="col-md-1 d-flex align-items-center justify-content-center">
+    <div class="h3">
+    TAI
+    </div>
+  </div>
+  <div class="col-md-5">
+    <button class="btn btn-lg btn-block btn-primary"
             type="button"
-            data-ng-click="cancelAndGoToPublicationListing()">
-      {{i18n.content.tietojensyotto.keskeyta[lang]}}
+            data-ng-click="useVaihe(4)">
+      Syötä julkaisu
     </button>
   </div>
-  <!-- </div> -->
 </div>
+<div class="row form-group">
+  <div class="col-md-12">
+    <div class="text-right">
+      <button class="btn  btn-danger"
+              type="button"
+              data-ng-click="cancelAndGoToPublicationListing()">
+        {{i18n.content.tietojensyotto.keskeyta[lang]}}
+      </button>
+    </div>
+  </div>
+</div>
+<!-- </div> -->
+<!--</div>-->
