Add file to save view

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -28,6 +28,12 @@
         <td>{{ justus.julkaisu.julkaisunnimi }}</td>
       </tr>
 
+      <!-- Julkaisu -->
+    <tr>
+      <td class="condensed"> Julkaisu </td>
+      <td>{{ justus.file.name }}</td>
+    </tr>
+
       <!-- Tekijät -->
       <tr>
         <td class="condensed">{{ i18n.content.form.tekijat[lang] }}</td>
