--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -1,5 +1,5 @@
-<div class="alert alert-transparent text-center" data-ng-if="justus.id">
-  <h4>Muokkaat julkaisua {{ justus.id }}, {{ justus.julkaisunnimi }}</h4>
+<div class="alert alert-transparent text-center" data-ng-if="justus.julkaisu.id">
+  <h4>Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</h4>
   <button class="btn btn-primary" data-ng-click="clearFormAndReturnToStart()">Hylkää muutokset ja siirry alkuun</button>
 </div>
 
