Fixed bug with muu tunniste lisatieto not showing in tallennus view

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -248,7 +248,7 @@
       <!-- Show this field only when art publication is selected -->
       <tr ng-if="justus.taiteenala.length > 0">
           <td class="condensed">{{ i18n.content.form.muutunniste[lang] }}</td>
-          <td>{{ justus.tempLisatieto.muutunniste.lisatietoteksti }}</td>
+          <td>{{ justus.lisatieto.muutunniste  }}</td>
       </tr>
 
       <!-- Pysyvä verkko-osoite -->
