Fixed bug with keyword indexing

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -760,7 +760,7 @@
         data-on-tag-removed="removeAvainsana()"
         data-enable-editing-last-tag="true"
         display-property="prefLabel"
-        key-property="localname"
+        track-by-expr="$index"
         data-add-on-blur="false"
         data-min-length="1">
         <auto-complete
