Fix footers helpdesk mail

--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -2,7 +2,7 @@
   <div class="col-xs-4">
     <div data-ng-if="state.name!='index'">
       {{i18n.footer.help.title[lang]}}:<br>
-      {{user.organization.email}}<br>
+      {{user.mail}}<br>
       <!--
       {{i18n.footer.help.email[lang]}}<br>
       {{i18n.footer.help.time[lang]}}<br>
