Small fix to rooli field

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -56,7 +56,7 @@
             <div data-ng-if="justus.organisaatiotekija[$index].orcid && justus.organisaatiotekija[$index].orcid.length > 0">
               {{ justus.organisaatiotekija[$index].orcid }}
             </div>
-            <div data-ng-if="justus.organisaatiotekija[$index].rooli && justus.organisaatiotekija[$index].rooli.length > 0">
+            <div data-ng-if="justus.organisaatiotekija[$index].rooli">
               <span data-ng-bind="justus.organisaatiotekija[$index].rooli"></span>
               <span data-ng-bind="getSelite(codes.julkaisuntekijanrooli ,justus.organisaatiotekija[$index].rooli)"></span>
             </div>
