--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -32,7 +32,7 @@
     <div  data-ng-if="state.name!='index' && user">
       <span><i>{{user.name}}</i>,&nbsp;
         <span data-ng-if="initialRole === 'owner'">{{ user.organization.code}}:&nbsp;</span>{{ user.organization.name }}</span>
-      <span>| <a href="" data-ng-href="{{ siteUrl }}/Shibboleth.sso/Logout?return={{ siteUrl }}">{{i18n.header.logout[lang]}}</a></span>
+      <span>| <a href="" data-ng-href="{{ siteUrl }}Shibboleth.sso/Logout?return={{ siteUrl }}">{{i18n.header.logout[lang]}}</a></span>
     </div>
     <div>
       <span>
