Fix bug with avoin saatavuus check box

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1362,7 +1362,7 @@
           <br>
           <label data-ng-model="lab2_avoinsaatavuus" class="control-label">
             <input type="radio"
-              data-ng-model="justus.avoinsaatavuus"
+              data-ng-model="justus.julkaisu.avoinsaatavuus"
               value="1">
               {{i18n.content.form.avoinsaatavuus['1'][lang]}}
               <i class="fa fa-info-circle justus-info"
