Make orcid visible when alayksikko is visible

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -265,7 +265,7 @@
                 </ui-select>
             </div>
 
-            <div data-ng-if="isFieldVisible('orcid')" class="col-xs-12 col-sm-6 form-group" id="orcidGroup">
+            <div data-ng-if="isFieldVisible('alayksikko') && isFieldRequired('alayksikko')"  class="col-xs-12 col-sm-6 form-group" id="orcidGroup">
               <input type="text" class="form-control"
                 data-ng-model="justus.organisaatiotekija[$index].orcid"
                 data-ng-pattern="pattern.orcid" data-orcid-directive=""
